# cpp_plugin_architecture

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/api/: CMakeLists.txt  abstract_plugin.h  operation.h
src/engine/: CMakeLists.txt  calculator_engine.cpp  calculator_engine.h  plugin_entry.cpp  plugin_entry.h  plugin_registry.cpp  plugin_registry.h  plugin_utils.cpp  plugin_utils.h
src/json/nlohmann/detail/: macro_scope.hpp
src/plugin_addition/: CMakeLists.txt  addition_plugin.cpp  addition_plugin.h
src/plugin_subtraction/: CMakeLists.txt  subtraction_plugin.cpp  subtraction_plugin.h
